# toefl-gpt

./: README.md  advise.ipynb  main.ipynb  pyproject.toml  rate.ipynb
notebooks/: advise.ipynb  rate.ipynb
skills/ToeflSkill/Advise/: config.json  skprompt.txt
skills/ToeflSkill/Rate/: skprompt.txt
